# 2023_CPL_coding_exercise

./: CMakeLists.txt  README.md  Sort.c  new.c
01-Lesson1/: Ascii.c  CMakeLists.txt  Change.c  Equation.c  Gravity.c  Julian.c  Pi.c  Time.c
02-Lesson2/: CMakeLists.txt  Collatz.c  Factorial1.c  Inverse.c  Series.c  Single.c  StandUp.c
03-Lesson3/: BalanceTernary1.c  BalanceTernary2.c  BubbleSort.c  CMakeLists.txt  Flip.c  Josephus.c  Palindrome1.c
03-Lesson3/Bonus/: CMakeLists.txt  Decimal.c  Palindrome2.c  QuickSort.c
04-Lesson4/: CMakeLists.txt  Formation.c  MatrixMult.c  Mines.c  Sudoku.c  Trace.c
04-Lesson4/Bonus/: Obstacle.c  (+2 more)
05-Lesson5/: AbsolutePrime.c  Behaviors.c  CMakeLists.txt  MagicSquare.c  NextPermutation.c  Pair.c  Radix.c  Sum.c
06-Lesson6/: CMakeLists.txt  Decomposition.c  Integration.c  Max.c  Pascal.c  Poi.c  Tiles.c  Triangle.c
07-Lesson7/: Brackets.c  Buddy.c  CMakeLists.txt  Cuboid.c  Pour.c  Rotate.c  Stack.c  WhacAMole.c  Wine.c
08-Lesson8/: CMakeLists.txt  Interpreter.c  Substr.c  Title.c
09-Lesson9/: CMakeLists.txt  Parse.c  Strcat.c  StrsInterleaf.c  Tokenizer.c  new.c
10-Lesson10/: BSearch.c  CMakeLists.txt  Fifa.c  Polynlist.c  SplitSort.c
11-Lesson11/: CMakeLists.txt  Keyboard.c  StackPour.c
_BonusQuestion/: APlusB.c  CMakeLists.txt  Cube.c  Elf.c  Factorial2.c  PrimeNumber.c  Quine.c  Sudoku.c  SuperCalculator.c
_Exam/: CMakeLists.txt
_LeetCode/: CMakeLists.txt
_UOJ/: B.c  CMakeLists.txt  D.c  K.c  M.c
_Valley/: 1789V.c  1830V.c  2084V.c  4327V.c  CMakeLists.txt
_Valley/Intro/: B2006.c  B2095.c  CMakeLists.txt  P1739.c  P2006.c  P2084.c  P2524.c  P2525.c  P2676.c  P2955.c  P2956.c  P3717.c  P3741.c  P4326.c  P5534.c  P5708.c  P5734.c  P5886.c  P6056.c
(+28 files in other folders)
