cmake_minimum_required(VERSION 3.26)
project(2023_CPL_coding_exercise C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(01-Lesson1)
add_subdirectory(02-Lesson2)
add_subdirectory(_LeetCode)
add_subdirectory(_BonusQuestion)
add_subdirectory(03-Lesson3)
add_subdirectory(04-Lesson4)
add_subdirectory(_Valley)
add_subdirectory(05-Lesson5)
add_executable(new new.c)
add_subdirectory(_Exam)
add_subdirectory(06-Lesson6)
add_subdirectory(07-Lesson7)
add_subdirectory(08-Lesson8)
add_subdirectory(09-Lesson9)
add_subdirectory(_UOJ)
add_subdirectory(10-Lesson10)
