add_executable(P4327 P4327.c)
add_executable(P4326 P4326.c)
add_executable(P2084 P2084.c)
add_executable(P1789 P1789.c)
add_executable(P1830 P1830.c)
add_executable(P2006 P2006.c)
add_executable(P2525 P2525.c)
add_executable(P2524 P2524.c)
add_executable(P2676 P2676.c)
add_executable(P2956 P2956.c)
add_executable(P3717 P3717.c)
add_executable(P5886 P5886.c)
add_executable(P5734 P5734.c)
add_executable(B2006 B2006.c)
add_executable(B2095 B2095.c)
add_executable(P1739 P1739.c)
add_executable(P2955 P2955.c)
add_executable(P6056 P6056.c)
add_executable(P5534 P5534.c)
add_executable(P5708 P5708.c)
add_executable(P3741 P3741.c)
